--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@
 #https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
 
 
-
-Flask == 1.1.2
-SQLAlchemy == 1.4.11
-torch == 1.3.1
-transformers == 4.8.2
-gunicorn == 19.9.0
+Flask
+SQLAlchemy
+torch
+transformers
+gunicorn
