--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 ###### Requirements with Version Specifiers ######`
 #-f https://download.pytorch.org/whl/torch_stable.html
 
-#https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
 
 
-Flask
-SQLAlchemy
-torch
-transformers
-gunicorn
+gunicorn==20.0.4
+Flask == 1.1.2
+SQLAlchemy == 1.4.11
+#torch == 1.3.1+cpu
+transformers == 4.8.2
