--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.w
 
 
 gunicorn==20.0.4
+numpy==1.19.1
 Flask == 1.1.2
 SQLAlchemy == 1.4.11
 #torch == 1.3.1+cpu
-transformers == 4.8.2
+transformers == 3.0.2
